tests/configuration/invalid_environment/invalid_value/configuration/settings_float.py
from selva.configuration import environment as env

env.get_float("INVALID")
